--- a/popup.html
+++ b/popup.html
@@ -12,12 +12,12 @@
             margin: 0;
             padding: 10px;
             text-align: center;
-            width: 300px; /* Adjust width as needed */
-        height: 400px; /* Adjust height as needed */
+            width: 400px; /* Adjust width as needed */
+            height: 430px; /* Adjust height as needed */
         }
         .emoji-list {
             list-style-type: none;
-            padding: 0;
+            margin: 10;
         }
         .emoji-item {
             margin-bottom: 10px;
