"add link to code review emoji guidelines"

--- a/popup.html
+++ b/popup.html
@@ -59,7 +59,7 @@
     <img src="./logo.png" alt="Logo" class="logo">
     <h1>GitHub Emoji Commenter</h1>
         <p>Hover over a line in GitHub diff to add an emoji.</p>
-    <h1> Code review emoji guide</h1>
+    <h1> <a href="https://github.com/axolo-co/developer-resources/tree/main/code-review-emoji-guide" target="_blank">Code review emoji guide</a></h1>
     <ul class="emoji-list">
         <li class="emoji-item">👍 - Positive highlight.</li>
         <li class="emoji-item">🔧 - Suggested change/refactor.</li>
