--- a/popup.html
+++ b/popup.html
@@ -1,78 +1,174 @@
 <!DOCTYPE html>
 <html>
-    
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>GitHub Emoji Extension</title>
     <style>
-        /* Dark Mode Styling */
-        .logo {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            width: 50px; /* Adjust the width as needed */
-            height: auto;
-            border-radius: 10px; 
-        }
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 10px;
-            text-align: center;
-            color: #c0c0c0; /* Greyish font */
-            background-color: #333;
-            width: 400px;
-            height: auto;
-            position: relative; /* For positioning the share icon */
-        }
-        .emoji-list {
-            list-style-type: none;
-            margin: 10px;
-            padding: 0;
-        }
-        .emoji-item {
-            margin-bottom: 10px;
-            text-align: left;
-            font-size: 16px;
+      /* Dark Mode Styling */
 
-        }
-        a, a:visited {
-            color: #4FA1F3;
-        }
-        footer {
-            margin-top: 20px;
-        }
-        .share-icon {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            text-decoration: none;
-            color: #4FA1F3; /* Adjust color as needed */
-            font-size: 24px; /* Adjust size as needed */
-        }
-        p {
-            font-size: 16px;
-        }
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 10px;
+        text-align: center;
+        color: #c0c0c0; /* Greyish font */
+        background-color: #333;
+        width: 450px;
+        min-height: 600px;
+        position: relative; /* For positioning the share icon */
+      }
+      .logo {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        width: 50px; /* Adjust the width as needed */
+        height: auto;
+        border-radius: 10px;
+      }
+      .emoji-list {
+        list-style-type: none;
+        margin: 10px;
+        padding: 0;
+      }
+      .emoji-item {
+        margin-bottom: 10px;
+        text-align: left;
+        font-size: 16px;
+      }
+      a,
+      a:visited {
+        color: #4fa1f3;
+      }
+      footer {
+        margin-top: 20px;
+      }
+      .share-icon {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        text-decoration: none;
+        color: #4fa1f3; /* Adjust color as needed */
+        font-size: 24px; /* Adjust size as needed */
+      }
+      p span {
+        font-size: 16px;
+      }
+
+      /* ON OFF setting */
+      .setting {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px;
+        background-color: #444; /* or any color that fits your design */
+        border-radius: 5px;
+        margin: 5px 0;
+      }
+
+      .setting-label {
+        color: #c0c0c0;
+        flex-grow: 1;
+        font-size: 18px;
+      }
+      /* The switch - the box around the slider */
+      .switch {
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 34px;
+        margin-left: 10px;
+        vertical-align: middle;
+      }
+
+      /* Hide default HTML checkbox */
+      .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+
+      /* The slider */
+      .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: 0.4s;
+        transition: 0.4s;
+      }
+
+      .slider:before {
+        position: absolute;
+        content: '';
+        height: 26px;
+        width: 26px;
+        left: 4px;
+        bottom: 4px;
+        background-color: white;
+        -webkit-transition: 0.4s;
+        transition: 0.4s;
+      }
+
+      input:checked + .slider {
+        background-color: #2196f3;
+      }
+
+      input:focus + .slider {
+        box-shadow: 0 0 1px #2196f3;
+      }
+
+      input:checked + .slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+      }
+
+      /* Rounded sliders */
+      .slider.round {
+        border-radius: 34px;
+      }
+
+      .slider.round:before {
+        border-radius: 50%;
+      }
     </style>
-</head>
-<body>
-    <img src="./logo.png" alt="Logo" class="logo">
+  </head>
+  <body>
+    <img src="./logo.png" alt="Logo" class="logo" />
     <h1>GitHub Emoji Commenter</h1>
-        <p>Hover over a line in GitHub diff to add an emoji.</p>
-    <h1> <a href="https://github.com/axolo-co/developer-resources/tree/main/code-review-emoji-guide" target="_blank">Code review emoji guide</a></h1>
+    <p>Hover over a line in GitHub diff to add an emoji.</p>
+    <h1>
+      <a
+        href="https://github.com/axolo-co/developer-resources/tree/main/code-review-emoji-guide"
+        target="_blank"
+        >Code review emoji guide</a
+      >
+    </h1>
     <ul class="emoji-list">
-        <li class="emoji-item">👍 - Positive highlight.</li>
-        <li class="emoji-item">🔧 - Suggested change/refactor.</li>
-        <li class="emoji-item">❓ - Question needing response.</li>
-        <li class="emoji-item">🤔💭 - Thinking out loud/exploring alternatives.</li>
-        <li class="emoji-item">🌱 - Planting a seed for future consideration.</li>
-        <li class="emoji-item">📝 - Explanatory note or commentary.</li>
-        <li class="emoji-item">⛏ - Nitpick, often stylistic or formatting.</li>
-        <li class="emoji-item">♻️ - Suggestion for refactoring.</li>
-        <li class="emoji-item">🏕 - Opportunity for improvement.</li>
-        <li class="emoji-item">📌 - Out of scope concern for follow-up.</li>
-        <li class="emoji-item">💡 - Insightful idea or suggestion.</li>
+      <li class="emoji-item">👍 - Positive highlight.</li>
+      <li class="emoji-item">🔧 - Suggested change/refactor.</li>
+      <li class="emoji-item">❓ - Question needing response.</li>
+      <li class="emoji-item">🤔💭 - Thinking out loud/exploring alternatives.</li>
+      <li class="emoji-item">🌱 - Planting a seed for future consideration.</li>
+      <li class="emoji-item">📝 - Explanatory note or commentary.</li>
+      <li class="emoji-item">⛏ - Nitpick, often stylistic or formatting.</li>
+      <li class="emoji-item">♻️ - Suggestion for refactoring.</li>
+      <li class="emoji-item">🏕 - Opportunity for improvement.</li>
+      <li class="emoji-item">📌 - Out of scope concern for follow-up.</li>
+      <li class="emoji-item">💡 - Insightful idea or suggestion.</li>
     </ul>
+
+    <h2>Settings</h2>
+    <div class="setting">
+      <span class="setting-label">Automatically post comment with emoji</span>
+      <label class="switch">
+        <input type="checkbox" id="autoComment" name="autoComment" checked />
+        <span class="slider round"></span>
+      </label>
+    </div>
 
     <!-- Email Submission Section -->
     <!-- <h3>Stay Updated</h3> 
@@ -84,11 +180,10 @@
     <!-- Share Extension Icon -->
     <!-- <button id="copyToClipboard" class="share-icon">📧 Copy Share Link</button> -->
 
-
-
     <!-- Footer -->
     <footer>
-        <p>Brought to you by <a href="https://axolo.co" target="_blank">Axolo</a></p>
+      <p>Brought to you by <a href="https://axolo.co" target="_blank">Axolo</a></p>
     </footer>
-</body>
+    <script src="popup.js"></script>
+  </body>
 </html>
