"thinking out loud"

--- a/popup.html
+++ b/popup.html
@@ -151,7 +151,7 @@
       <li class="emoji-item">👍 - Positive highlight.</li>
       <li class="emoji-item">🔧 - Suggested change/refactor.</li>
       <li class="emoji-item">❓ - Question needing response.</li>
-      <li class="emoji-item">🤔💭 - Thinking out loud/exploring alternatives.</li>
+      <li class="emoji-item">🤔 - Thinking out loud/exploring alternatives.</li>
       <li class="emoji-item">🌱 - Planting a seed for future consideration.</li>
       <li class="emoji-item">📝 - Explanatory note or commentary.</li>
       <li class="emoji-item">⛏ - Nitpick, often stylistic or formatting.</li>
