--- a/popup.html
+++ b/popup.html
@@ -138,7 +138,7 @@
   </head>
   <body>
     <img src="./logo.png" alt="Logo" class="logo" />
-    <h1>GitHub Emoji Commenter</h1>
+    <h1>Emoji reactions for GitHub</h1>
     <p>Hover over a line in GitHub diff to add an emoji.</p>
     <h1>
       <a
