popup html enhancements + logo

--- a/popup.html
+++ b/popup.html
@@ -68,7 +68,7 @@
       .setting-label {
         color: #c0c0c0;
         flex-grow: 1;
-        font-size: 18px;
+        font-size: 16px;
       }
       /* The switch - the box around the slider */
       .switch {
@@ -142,9 +142,9 @@
     <p>Hover over a line in GitHub diff to add an emoji.</p>
     <h1>
       <a
-        href="https://github.com/axolo-co/developer-resources/tree/main/code-review-emoji-guide"
+        href="https://axolo.co/emoji-reactions-for-github?utm_source=chrome&utm_medium=extension&utm_campaign=chrome-extension"
         target="_blank"
-        >Code review emoji guide</a
+        >Emoji Reactions for GitHub</a
       >
     </h1>
     <ul class="emoji-list">
@@ -161,7 +161,6 @@
       <li class="emoji-item">💡 - Insightful idea or suggestion.</li>
     </ul>
 
-    <h2>Settings</h2>
     <div class="setting">
       <span class="setting-label">Automatically post comment with emoji</span>
       <label class="switch">
@@ -182,7 +181,15 @@
 
     <!-- Footer -->
     <footer>
-      <p>Brought to you by <a href="https://axolo.co" target="_blank">Axolo</a></p>
+      <p>
+        Brought to you by
+        <a href="https://axolo.co" target="_blank">Axolo</a>
+        <img
+          src="axolo_logo.png"
+          alt="Axolo Logo"
+          style="height: 30px; vertical-align: middle"
+        />
+      </p>
     </footer>
     <script src="popup.js"></script>
   </body>
