--- a/popup.html
+++ b/popup.html
@@ -17,10 +17,18 @@
         min-height: 480px;
         position: relative; /* For positioning the share icon */
       }
+
+      .title-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 10px;
+      }
+
+      .title-container .logo {
+        margin-right: 10px;
+      }
       .logo {
-        position: absolute;
-        top: 10px;
-        left: 10px;
         width: 40px;
         height: auto;
         border-radius: 10px;
@@ -137,8 +145,10 @@
     </style>
   </head>
   <body>
-    <img src="./logo.png" alt="Logo" class="logo" />
-    <h1>Emoji reactions for GitHub</h1>
+    <div class="title-container">
+      <img src="./logo.png" alt="Logo" class="logo" />
+      <h1>Emoji reactions for GitHub</h1>
+    </div>
     <p>Hover over a line in GitHub diff to add an emoji.</p>
     <h1>
       <a
@@ -183,12 +193,13 @@
     <footer>
       <p>
         Brought to you by
-        <a href="https://axolo.co" target="_blank">Axolo</a>
-        <img
-          src="axolo_logo.png"
-          alt="Axolo Logo"
-          style="height: 30px; vertical-align: middle"
-        />
+        <a href="https://axolo.co" target="_blank">
+          <img
+            src="logo_axolo.png"
+            alt="Axolo Logo"
+            style="height: 20px; margin-top: -5px; vertical-align: middle"
+          />
+        </a>
       </p>
     </footer>
     <script src="popup.js"></script>
